h5game_backend/static/css/game.css
#div-game-page-0{
    box-sizing:border-box;
    background : #000000 url("../images/question_bg_1.png") no-repeat bottom left;
    -webkit-background-size: cover;
    -moz-background-size: cover;
    -o-background-size: cover;
    background-size: cover;
    min-height:100%;
    padding-top: 10px;
}

#div-game-page-1{
    box-sizing:border-box;
    background : #000000 url("../images/question_bg_2.png") no-repeat bottom left;
    -webkit-background-size: cover;
    -moz-background-size: cover;
    -o-background-size: cover;
    background-size: cover;
    min-height:100%;
    padding-top: 10px;    
}
#div-game-page-2{
    box-sizing:border-box;
    background : #000000 url("../images/question_bg_3.png") no-repeat bottom left;
    -webkit-background-size: cover;
    -moz-background-size: cover;
    -o-background-size: cover;
    background-size: cover;
    min-height:100%;
    padding-top: 10px;
}

#div-game-page-3{
    box-sizing:border-box;
    background : #000000 url("../images/question_bg_4.png") no-repeat bottom left;
    -webkit-background-size: cover;
    -moz-background-size: cover;
    -o-background-size: cover;
    background-size: cover;
    min-height:100%;
    padding-top: 10px;    
}
#div-game-page-4{
    box-sizing:border-box;
    background : #000000 url("../images/question_bg_5.png") no-repeat bottom left;
    -webkit-background-size: cover;
    -moz-background-size: cover;
    -o-background-size: cover;
    background-size: cover;
    min-height:100%;
    padding-top: 10px;
}


#div-play-game-page{
    box-sizing:border-box;
    background-image:  url("../images/game_play_background.png");
    background-repeat: repeat;
    width: 88%;
    margin: 0px auto;
    min-height: 570px;
    border:4px solid black;
}

.title{
    margin: 0px auto;
    margin-top: 15px;
    background-color: #000000;
    text-align: center;
    width: 95%;
    height: 32px;
    line-height: 34px
    overflow:hidden;
}
.tips{
    font-size: 10px;
}
.question{
    height: 220px;
    border: 4px dotted black;
    margin: 0px auto;
    width: 95%;
    margin-top: 10px;
}

.inner-question{
    height: 200px;
    border: 4px solid #4e0000;
    margin: 0px auto;
    width: 96%;
    margin-top: 6px;
}

.inner-question img{
    height: 100%;
    width: 100%;
}

.answer{    
    width: 95%;
    height: 290px;
    margin: 5px auto;
    font-size: 1rem;
    display: block;
    text-align: center;
    line-height: 34px;
    text-decoration: none;
    overflow: hidden;
}
.answer_block{
    float: left;
    width: 45%;
    font-size: 1rem;
    display: block;
    text-align: center;
    border-radius: 5px;
    opacity: 0.5;
}
.answer_block.odd{
    margin-left: 15px;
}
.answer_block img{
    display: inline-block;
    margin-left: 5px;
    width: 100%;
    border: 4px solid black;
    height: 95px;
}

.inner-question video{
    width: 100%;
    height: 100%;
}

.video{
    width: 100%;
}

.answer-order{
    float: left;
    width: 110%;
    height: 28px;
    display: block;
    font-weight: bold;
    color: #f2a10a;
    background-color: #000000;
    text-align: left;
}
.answer-order span{
    font-size: 0.8em;
}

.div-next{
    text-align: center;
    width: 160px;
    height: 100%;
    margin: 0px auto;
    margin-top: 15px;
}

.div-next img{
    height: 34px;
    width: 139px;
    }

